--- a/micropets/cats.yaml
+++ b/micropets/cats.yaml
@@ -1,7 +1,7 @@
 #@data/values
 ---
 application:
-  name: micro-pet-3
+  name: micro-pet
 service:  
   name: cats
   port: 7002
@@ -10,7 +10,7 @@ service:
   backend:
     observability: true
     mode: RANDOM_NUMBER
-    frequencyError: 18          
+    frequencyError: 10          
 environment:
   name: aws/europ
   ingress: contour
