--- a/applications/micropets/gui/values.yaml
+++ b/applications/micropets/gui/values.yaml
@@ -1,7 +1,7 @@
 #@data/values
 ---          
 gui:            
-  color:red
+  color: blue
   config_path: /workspace/dist/assets
-  broker_service: xxxx
+  broker_service: /pest
 
