--- a/environments/aws/tkg-europ2/environment-values.yaml
+++ b/environments/aws/tkg-europ2/environment-values.yaml
@@ -4,7 +4,7 @@ environment:
   name: aws/europ2
   ingress: istio
   domain:
-    internal: .micropets-supplychain.svc.cluster.local
+    internal: .bmoussaud.prod
     exposed: micropet.europ2.mytanzu.xyz
 
 
