--- a/environments/azure/aks-east1/environment-values.yaml
+++ b/environments/azure/aks-east1/environment-values.yaml
@@ -1,8 +1,11 @@
 #@data/values
 ---
+gui:
+   color: blue
+   broker_service: http://pets.hermes.avilab.top
 environment:
   name: aks/east1
   ingress: istio
   domain:
-    internal: .micropets-supplychain.svc.cluster.local
-    exposed: east1.mytanzu.xyz
+    internal: .bmoussaud.prod
+    exposed: azu.hermes.avilab.top
