--- a/environments/aws/tkg-europ2/environment-values.yaml
+++ b/environments/aws/tkg-europ2/environment-values.yaml
@@ -1,6 +1,8 @@
 #@data/values
 ---
 service:  
+  backend:    
+    frequencyError: 20
   gui:
     color: red
     broker_service: http://pets.hermes.avilab.top
