update config_path for backend services

--- a/applications/micropets/dogs/values.yaml
+++ b/applications/micropets/dogs/values.yaml
@@ -6,4 +6,5 @@ service:
   name: dogs
   port: 7003
   image: harbor.mytanzu.xyz/library/micropet-tap-dogs@sha256:ce2286db9c106f950cfd40c223a49bd8c50f2e7c8325a13892e4d9498f69b19b     
+  config_path: /config
 
