fishes: Update service configuration https://github.com/bmoussaud/micropets-app/commit/a02f0e468879346947cf4126490f54eff5c2d711

--- a/applications/micropets/fishes/values.yaml
+++ b/applications/micropets/fishes/values.yaml
@@ -5,8 +5,7 @@ application:
 service:  
   name: fishes
   port: 7007
-  image: harbor.mytanzu.xyz/library/micropet-tap-fishes@sha256:1877bfc24eaf184e08de739bc72d8e2efa9d1e4f4ce552bde615ef418c6a584c     
-  config_path: /config/
+  image: harbor.mytanzu.xyz/library/micropet-tap-fishes@sha256:1877bfc24eaf184e08de739bc72d8e2efa9d1e4f4ce552bde615ef418c6a584c    
+  config_path: /config
   config_filename: pets_config.json
-  
 
