cats: Update service configuration https://github.com/bmoussaud/micropets-app/commit/a02f0e468879346947cf4126490f54eff5c2d711

--- a/applications/micropets/cats/values.yaml
+++ b/applications/micropets/cats/values.yaml
@@ -5,8 +5,7 @@ application:
 service:  
   name: cats
   port: 7002
-  image: harbor.mytanzu.xyz/library/micropet-tap-cats@sha256:13e593c7228e233e2ba0f3e08956311ac84dcfb7fcfc462e9211a0eaac8dae50     
-  config_path: /config/
+  image: harbor.mytanzu.xyz/library/micropet-tap-cats@sha256:13e593c7228e233e2ba0f3e08956311ac84dcfb7fcfc462e9211a0eaac8dae50    
+  config_path: /config
   config_filename: pets_config.json
-  
 
