--- a/environments/vsphere/c1/environment-values.yaml
+++ b/environments/vsphere/c1/environment-values.yaml
@@ -8,7 +8,7 @@ service:
     #broker_service: http://pets.hermes.avilab.top
     broker_service: http://c1.xxxx.mytanzu.xyz
 environment:
-  name: vsphere/C1
+  name: vsphere/c1
   ingress: istio
   domain:
     internal: .micropets-supplychain.svc.cluster.local
