--- a/applications/loader/gns/resources.yaml
+++ b/applications/loader/gns/resources.yaml
@@ -8,7 +8,7 @@ metadata:
     app.kubernetes.io/component: loader
     app.kubernetes.io/part-of: vegeta
 data:
-  targets.txt: "GET http://pets.micropets-supplychain.svc.cluster.local/pets"
+  targets.txt: "GET http://pets.hermes.avilab.top/pets"
 ---
 apiVersion: batch/v1
 kind: Job
