--- a/applications/loader/002/resources.yaml
+++ b/applications/loader/002/resources.yaml
@@ -9,7 +9,7 @@ metadata:
   labels:
     app.kubernetes.io/component: loader
     app.kubernetes.io/part-of: vegeta
-    app.kubernetes.io/version: 002
+    app.kubernetes.io/version: "002"
 data:  
   targets.txt: #@ "GET http://pets-service{}:9000/pets".format(data.values.environment.domain.internal)
 ---
@@ -20,7 +20,7 @@ metadata:
   labels:
     app.kubernetes.io/component: loader
     app.kubernetes.io/part-of: vegeta
-    app.kubernetes.io/version: 002
+    app.kubernetes.io/version: "002"
 spec:
   template:
     spec:
