--- a/environments/azure/aks-east-2/environment-values.yaml
+++ b/environments/azure/aks-east-2/environment-values.yaml
@@ -5,14 +5,14 @@ service:
     frequencyError: 20
   gui:
     color: blue
-    broker_service: http://pets.hermes.avilab.top
-    #broker_service: http://east.micropet.mytanzu.xyz
+    #broker_service: http://pets.hermes.avilab.top
+    broker_service: http://east.micropet.mytanzu.xyz
 environment:
   name: aks/east-2
   ingress: istio
   domain:
-    #internal: .micropets-supplychain.svc.cluster.local
-    internal: .micropets.prod
+    internal: .micropets-supplychain.svc.cluster.local
+    #internal: .micropets.prod
     exposed: east.micropet.mytanzu.xyz
 
 
