--- a/environments/azure/aks-east-2/environment-values.yaml
+++ b/environments/azure/aks-east-2/environment-values.yaml
@@ -12,7 +12,7 @@ environment:
   ingress: istio
   domain:
     #internal: .micropets-supplychain.svc.cluster.local
-    internal: .micropets.prod
+    internal: .micropet.prod
     exposed: east.micropet.mytanzu.xyz
 
 
