configure aks tap demo

--- a/environments/azure/bmoussaud-tap-demo/environment-values.yaml
+++ b/environments/azure/bmoussaud-tap-demo/environment-values.yaml
@@ -2,9 +2,9 @@
 ---
 service:    
   gui:
-    color: red
+    color: green
 environment:
-  name: azure/front
+  name: azure/south
   ingress: contour
   domain:
     internal: .micropets-supplychain.svc.cluster.local
