--- a/environments/azure/bmoussaud-tap-demo/environment-values.yaml
+++ b/environments/azure/bmoussaud-tap-demo/environment-values.yaml
@@ -7,7 +7,8 @@ environment:
   name: azure/south
   ingress: istio
   domain:
-    internal: .micropets-supplychain.svc.cluster.local
+    #internal: .micropets-supplychain.svc.cluster.local
+    internal: micropets.demo 
     exposed: front.tap.aks.mytanzu.xyz
 
 
