fix internal domain

--- a/environments/aws/aws-north/environment-values.yaml
+++ b/environments/aws/aws-north/environment-values.yaml
@@ -11,7 +11,7 @@ environment:
   ingress: istio
   domain:
     #internal: .micropets-supplychain.svc.cluster.local
-    internal: micropets.demo 
+    internal: .micropets.demo 
     exposed: micropet.north.mytanzu.xyz
 
 
