--- a/environments/azure/bmoussaud-tap-demo/environment-values.yaml
+++ b/environments/azure/bmoussaud-tap-demo/environment-values.yaml
@@ -8,7 +8,7 @@ environment:
   ingress: istio
   domain:
     #internal: .micropets-supplychain.svc.cluster.local
-    internal: micropets.demo 
+    internal: .micropets.demo 
     exposed: front.tap.aks.mytanzu.xyz
 
 
