update south config

--- a/environments/azure/bmoussaud-tap-demo/environment-values.yaml
+++ b/environments/azure/bmoussaud-tap-demo/environment-values.yaml
@@ -1,8 +1,11 @@
 #@data/values
 ---
 service:    
+  backend:    
+    frequencyError: 13
   gui:
-    color: green
+    color: blue
+    broker_service: http://front.tap.aks.mytanzu.xyz
 environment:
   name: azure/south
   ingress: istio
