--- a/environments/azure/bmoussaud-tap-demo/environment-values.yaml
+++ b/environments/azure/bmoussaud-tap-demo/environment-values.yaml
@@ -4,7 +4,7 @@ service:
   backend:    
     frequencyError: 13
   gui:
-    color: blue
+    color: red
     broker_service: http://front.tap.aks.mytanzu.xyz
 environment:
   name: azure/south
