--- a/environments/aws/aws-north/environment-values.yaml
+++ b/environments/aws/aws-north/environment-values.yaml
@@ -4,7 +4,7 @@ service:
   backend:    
     frequencyError: 10
   gui:
-    color: red
+    color: green
     broker_service: http://micropet.north.mytanzu.xyz
 environment:
   name: aws/north
