--- a/template.yaml
+++ b/template.yaml
@@ -1,5 +1,3 @@
-#@ load("@ytt:data", "data")
-#@yaml/text-templated-strings
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -10,14 +8,14 @@ metadata:
   labels:
     app.kubernetes.io/component: loader
     app.kubernetes.io/part-of: vegeta
-    app.kubernetes.io/version: "005"
+    app.kubernetes.io/version: "00x"
 data:  
-  rate: "2"
-  duration: "0"  
+  rate: "10"
+  duration: "0"
   targets.txt: |
-    GET http://pets-service(@=  data.values.environment.domain.internal @):9000/pets
-    GET http://gui-service(@=  data.values.environment.domain.internal @):8080/
-    GET http://gui-service(@=  data.values.environment.domain.internal @):8080/assets/config.json
+    GET http://pets-service.micropets.demo:9000/pets
+    GET http://gui-service.micropets.demo:8080/
+    GET http://gui-service.micropets.demo:8080/assets/config.json
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -26,9 +24,9 @@ metadata:
   labels:
     app.kubernetes.io/component: loader
     app.kubernetes.io/part-of: vegeta
-    app.kubernetes.io/version: "005"
+    app.kubernetes.io/version: "00x"
 spec:
-  replicas: 1
+  replicas: 12
   selector:
     matchLabels:
       app: vegeta
