--- a/applications/micropets/cats/values.yaml
+++ b/applications/micropets/cats/values.yaml
@@ -8,4 +8,5 @@ service:
   image: harbor.mytanzu.xyz/library/micropet-tap-cats@sha256:d67dd57cb7ae904838cdd6b1d13c0ffe41daf8b26d56a6854799ebd3f8b4f56b    
   config_path: /config
   config_filename: pets_config.json
+  usedb: false          
 
