--- a/applications/micropets/dogs/values.yaml
+++ b/applications/micropets/dogs/values.yaml
@@ -8,4 +8,5 @@ service:
   image: harbor.mytanzu.xyz/library/micropet-tap-dogs@sha256:c0c9114afbde92d891970258e555d8f130b471d122ddce7b24114593038eafe1    
   config_path: /config
   config_filename: pets_config.json
+  usedb: false          
 
