--- a/applications/micropets/fishes/values.yaml
+++ b/applications/micropets/fishes/values.yaml
@@ -8,4 +8,5 @@ service:
   image: harbor.mytanzu.xyz/library/micropet-tap-fishes@sha256:3d9cd32673fa9371cffe0076b74e2b9b283586c7b4c3cf50fffddfc8d05e2b50    
   config_path: /config
   config_filename: pets_config.json
+  usedb: false          
 
