pets: Update service configuration https://github.com/bmoussaud/micropets-app/commit/467f0be6bfe0bf679616b1a6086f7a5546e57f39

--- a/applications/micropets/pets/values.yaml
+++ b/applications/micropets/pets/values.yaml
@@ -8,4 +8,5 @@ service:
   image: harbor.mytanzu.xyz/library/micropet-tap-pets@sha256:e3eacb35d6aef52d0efd2fcaa6335ca14c39992b8ad79afbb66cd29cad4f403e    
   config_path: /config
   config_filename: pets_config.json
+  usedb: false          
 
