--- a/applications/micropets/birds/values.yaml
+++ b/applications/micropets/birds/values.yaml
@@ -8,5 +8,5 @@ service:
   image: harbor.mytanzu.xyz/library/micropet-tap-birds@sha256:b7ce7bd93165e39eb095644efe0b9afc5e8a196e498b060b9f7bdffc14bfbd85    
   config_path: /config
   config_filename: pets_config.json
-  usedb: false          
+  usedb: true          
 
