update values with usedb false for older gui

--- a/applications/micropets/20220329/gui/values.yaml
+++ b/applications/micropets/20220329/gui/values.yaml
@@ -8,6 +8,7 @@ service:
   image: harbor.mytanzu.xyz/library/micropet-tap-gui@sha256:ffc26732c9bf7534643cdedfbd18e606b6033fbb17be2e471de220875d065b05    
   config_path: /workspace/dist/assets
   config_filename: config.json          
+  usedb: false
   gui:            
     broker_service: /
     color: blue                               
