--- a/deliverables/resources.yaml
+++ b/deliverables/resources.yaml
@@ -93,23 +93,23 @@ spec:
   - name: environment
     value: #@ data.values.environment
   - name: application
-    value: #@ data.values.application
+    value: micropets/20220329
 ---
-apiVersion: carto.run/v1alpha1
-kind: Deliverable
-metadata:
-  name: vegeta
-  labels:
-    app.tanzu.vmware.com/workload-type: simple-delivery
-spec:
-  serviceAccountName: #@ data.values.service_account_name
-  source:
-    git:
-      url: #@ "http://" + data.values.git_writer.server + "/" + data.values.git_writer.repository
-      ref:
-        branch: #@ data.values.git_writer.branch
-  params:
-  - name: environment
-    value: #@ data.values.environment
-  - name: application
-    value: loader/005
+#apiVersion: carto.run/v1alpha1
+#kind: Deliverable
+#metadata:
+#  name: vegeta
+#  labels:
+#    app.tanzu.vmware.com/workload-type: simple-delivery
+#spec:
+#  serviceAccountName: #@ data.values.service_account_name
+#  source:
+#    git:
+#      url: #@ "http://" + data.values.git_writer.server + "/" + data.values.git_writer.repository
+#      ref:
+#        branch: #@ data.values.git_writer.branch
+#  params:
+#  - name: environment
+#    value: #@ data.values.environment
+#  - name: application
+#    value: loader/005
