--- a/environments/azure/aks-full/environment-values.yaml
+++ b/environments/azure/aks-full/environment-values.yaml
@@ -8,7 +8,7 @@ service:
     broker_service: http://micropets.apps.full.aks.mytanzu.xyz
 environment:
   name: aks/full-tap
-  ingress: istio
+  ingress: none
   domain:
     internal: .micropets-supplychain.svc.cluster.local
     exposed: micropets.apps.full.aks.mytanzu.xyz
