--- a/environments/azure/aks-full/environment-values.yaml
+++ b/environments/azure/aks-full/environment-values.yaml
@@ -10,7 +10,7 @@ environment:
   name: aks/full-tap
   ingress: none
   domain:
-    internal: .micropets-supplychain.svc.cluster.local
+    internal: .dev-tap.svc.cluster.local
     exposed: micropets.apps.full.aks.mytanzu.xyz
 
 
