--- a/deliverables/values.yaml
+++ b/deliverables/values.yaml
@@ -1,9 +1,11 @@
 #@data/values
 ---
-service_account_name: cartographer-deliverable-sa
+#service_account_name: cartographer-deliverable-sa
+service_account_name: default
 git_writer:
   server: github.com
   repository: bmoussaud/micropets-app-gitops.git
   branch: main
-environment: aws/tkg-europe-3
-application: micropets/20220127
+environment: azure/aks-full
+application: micropets/current
+delivery: micropets-delivery-native
