--- a/applications/micropets/current/gui/values.yaml
+++ b/applications/micropets/current/gui/values.yaml
@@ -4,6 +4,7 @@ application:
   name: micro-pet
 service:  
   name: gui
+  component: gui
   port: 8080
   image: harbor.mytanzu.xyz/library/micropet-tap-gui@sha256:0163f5b72a3a7842a4c64100145dfa85816c3854d4a377c13ec7e2638f9952f5    
   config_path: /workspace/dist/assets
