birds: Update service configuration https://github.com/bmoussaud/micropets-app/commit/381258a5aa8c135f82c005d22d8c241238f12ae8

--- a/applications/micropets/current/birds/values.yaml
+++ b/applications/micropets/current/birds/values.yaml
@@ -4,6 +4,7 @@ application:
   name: micro-pet   
 service:  
   name: birds
+  component: backend
   port: 8080
   image: harbor.mytanzu.xyz/library/micropet-tap-birds@sha256:5db098b21a6951022eab8d33d9d5cdd13b012fce3ea00544f45ff95dd822768c    
   config_path: /config
