dogs: Update service configuration https://github.com/bmoussaud/micropets-app/commit/381258a5aa8c135f82c005d22d8c241238f12ae8

--- a/applications/micropets/current/dogs/values.yaml
+++ b/applications/micropets/current/dogs/values.yaml
@@ -4,6 +4,7 @@ application:
   name: micro-pet   
 service:  
   name: dogs
+  component: backend
   port: 7003
   image: harbor.mytanzu.xyz/library/micropet-tap-dogs@sha256:e94f3ea33b6f2cfb5a946b802f86afff03878632d8e4e3b416a0cf388dcf239a    
   config_path: /config
