--- a/applications/micropets/current/pets/values.yaml
+++ b/applications/micropets/current/pets/values.yaml
@@ -4,6 +4,7 @@ application:
   name: micro-pet   
 service:  
   name: pets
+  component: backend
   port: 9000
   image: harbor.mytanzu.xyz/library/micropet-tap-pets@sha256:5e1f61ba4ce3646b07ea8e1120d3932d8663454afef7d1677663ae0043f68f28    
   config_path: /config
