--- a/applications/micropets/20220329/gui/values.yaml
+++ b/applications/micropets/20220329/gui/values.yaml
@@ -4,6 +4,7 @@ application:
   name: micro-pet
 service:  
   name: gui
+  component: gui
   port: 8080
   image: harbor.mytanzu.xyz/library/micropet-tap-gui@sha256:ffc26732c9bf7534643cdedfbd18e606b6033fbb17be2e471de220875d065b05    
   config_path: /workspace/dist/assets
