--- a/environments/azure/aks-eu-tap-2/environment-values.yaml
+++ b/environments/azure/aks-eu-tap-2/environment-values.yaml
@@ -4,8 +4,8 @@ service:
   backend:    
     frequencyError: 20
   gui:
-    color: blue
-    broker_service: http://pets.dev-tap.apps.full.aks.mytanzu.xyz
+    color: red
+    broker_service: http://pets.dev-tap.apps.eu.aks.mytanzu.xyz
 environment:
   name: aks/tap-europe-2
   ingress: none
