add labels on deliveries

--- a/generators/deliverables/deliverables.yaml
+++ b/generators/deliverables/deliverables.yaml
@@ -6,6 +6,7 @@ metadata:
   name: micropets
   labels:
     app.tanzu.vmware.com/workload-type: simple-delivery
+    app.kubernetes.io/part-of: micropets-delivery 
 spec:
   serviceAccountName: #@ data.values.service_account_name
   source:
