change the name of the delivery cd

--- a/generators/deliverables/deliverables.yaml
+++ b/generators/deliverables/deliverables.yaml
@@ -3,7 +3,7 @@
 apiVersion: carto.run/v1alpha1
 kind: Deliverable
 metadata:
-  name: micropets
+  name: micropets-cd
   labels:
     app.tanzu.vmware.com/workload-type: simple-delivery
     app.kubernetes.io/part-of: micropets-delivery 
